Fix wrong margin on the title

--- a/search/search-dev-tools/src/style/style.scss
+++ b/search/search-dev-tools/src/style/style.scss
@@ -29,3 +29,8 @@
 		display: none !important;
 	}
 }
+
+
+.main_caption {
+	margin-bottom: 4px;
+}
